--- a/pursuit/Views/PostApplicationTableViewCell.xib
+++ b/pursuit/Views/PostApplicationTableViewCell.xib
@@ -1,60 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostApplication" rowHeight="115" id="KGk-i7-Jjw" customClass="PostApplicationTableViewCell" customModule="pursuit" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostApplication" id="KGk-i7-Jjw" customClass="PostApplicationTableViewCell" customModule="pursuit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple.logo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rbg-RT-VET">
-                        <rect key="frame" x="9" y="26.333333333333332" width="62" height="60.333333333333343"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="62" id="9NR-S6-nJZ"/>
-                            <constraint firstAttribute="height" constant="62" id="Lp0-Bc-Mz2"/>
-                        </constraints>
-                    </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="p2l-cG-M8s">
-                        <rect key="frame" x="79" y="12" width="229" height="92"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PPP-wg-sd5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="103"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msM-NM-n1D">
-                                <rect key="frame" x="0.0" y="0.0" width="78.666666666666671" height="25.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Job description " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTR-0O-dzU">
-                                <rect key="frame" x="0.0" y="42.333333333333336" width="104" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date Posted" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vgJ-pM-sRd">
-                                <rect key="frame" x="0.0" y="76.333333333333329" width="78.666666666666671" height="15.666666666666671"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple.logo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rbg-RT-VET">
+                                <rect key="frame" x="20" y="32" width="40" height="38.333333333333343"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="9NR-S6-nJZ"/>
+                                    <constraint firstAttribute="width" secondItem="Rbg-RT-VET" secondAttribute="height" id="HOY-3B-lcn"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="p2l-cG-M8s">
+                                <rect key="frame" x="72" y="12" width="228" height="83"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Software Engineer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msM-NM-n1D">
+                                        <rect key="frame" x="0.0" y="0.0" width="228" height="17.666666666666668"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Develop and maintain software applications, focusing on enhancing user experience and functionality." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hTR-0O-dzU">
+                                        <rect key="frame" x="0.0" y="21.666666666666664" width="228" height="42.999999999999993"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="posted 12 hours ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vgJ-pM-sRd">
+                                        <rect key="frame" x="0.0" y="68.666666666666671" width="228" height="14.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Rbg-RT-VET" firstAttribute="leading" secondItem="PPP-wg-sd5" secondAttribute="leading" constant="20" id="B3y-Lp-b6x"/>
+                            <constraint firstItem="p2l-cG-M8s" firstAttribute="leading" secondItem="Rbg-RT-VET" secondAttribute="trailing" constant="12" id="BXn-Pg-aLo"/>
+                            <constraint firstAttribute="bottom" secondItem="p2l-cG-M8s" secondAttribute="bottom" constant="8" id="CbM-hp-wgk"/>
+                            <constraint firstItem="Rbg-RT-VET" firstAttribute="centerY" secondItem="PPP-wg-sd5" secondAttribute="centerY" id="dwE-GF-Q7g"/>
+                            <constraint firstAttribute="trailing" secondItem="p2l-cG-M8s" secondAttribute="trailing" constant="20" id="hvB-Zq-TgN"/>
+                            <constraint firstItem="p2l-cG-M8s" firstAttribute="top" secondItem="PPP-wg-sd5" secondAttribute="top" constant="12" id="tFB-B9-doR"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Rbg-RT-VET" secondAttribute="bottom" constant="26" id="1vR-tS-Lz3"/>
-                    <constraint firstItem="Rbg-RT-VET" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="26" id="7Zk-su-fZ8"/>
-                    <constraint firstItem="Rbg-RT-VET" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="CPF-2C-VkY"/>
-                    <constraint firstAttribute="trailing" secondItem="p2l-cG-M8s" secondAttribute="trailing" constant="12" id="IhN-IT-LKU"/>
-                    <constraint firstItem="p2l-cG-M8s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Qsq-ex-txQ"/>
-                    <constraint firstAttribute="bottom" secondItem="p2l-cG-M8s" secondAttribute="bottom" constant="12" id="wj4-19-qnO"/>
-                    <constraint firstItem="p2l-cG-M8s" firstAttribute="leading" secondItem="Rbg-RT-VET" secondAttribute="trailing" constant="8" symbolic="YES" id="xay-Sj-F99"/>
+                    <constraint firstAttribute="bottom" secondItem="PPP-wg-sd5" secondAttribute="bottom" constant="12" id="BcE-qS-3sf"/>
+                    <constraint firstAttribute="trailing" secondItem="PPP-wg-sd5" secondAttribute="trailing" id="RQv-7C-0DE"/>
+                    <constraint firstItem="PPP-wg-sd5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="c8M-sF-9cl"/>
+                    <constraint firstItem="PPP-wg-sd5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="d86-mA-qUg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
