--- a/pursuit/Views/Base.storyboard
+++ b/pursuit/Views/Base.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,7 @@
                         <segue destination="N6x-RT-0Iq" kind="relationship" relationship="viewControllers" id="ZRv-mR-aRb"/>
                         <segue destination="sq9-AN-clp" kind="relationship" relationship="viewControllers" id="xB1-1n-RYp"/>
                         <segue destination="Pha-Gh-V8l" kind="relationship" relationship="viewControllers" id="e8B-dt-YZy"/>
-                        <segue destination="aUS-jl-yja" kind="relationship" relationship="viewControllers" id="GXd-aj-hEs"/>
+                        <segue destination="NSd-c4-auQ" kind="relationship" relationship="viewControllers" id="evK-Ut-Gxc"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7L-ks-aeA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -65,7 +65,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5PN-YT-6eK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-980" y="-144"/>
+            <point key="canvasLocation" x="-949" y="-146"/>
+        </scene>
+        <!--ProfileJobSeeker-->
+        <scene sceneID="K9x-tt-eg5">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="ProfileJobSeeker" storyboardName="ProfileJobSeeker" id="NSd-c4-auQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="djz-PV-Neo"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NDI-TZ-QTF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-944" y="-89"/>
         </scene>
     </scenes>
 </document>
