--- a/pursuit/Views/Base.storyboard
+++ b/pursuit/Views/Base.storyboard
@@ -20,7 +20,7 @@
                         <segue destination="N6x-RT-0Iq" kind="relationship" relationship="viewControllers" id="ZRv-mR-aRb"/>
                         <segue destination="sq9-AN-clp" kind="relationship" relationship="viewControllers" id="xB1-1n-RYp"/>
                         <segue destination="Pha-Gh-V8l" kind="relationship" relationship="viewControllers" id="e8B-dt-YZy"/>
-                        <segue destination="NSd-c4-auQ" kind="relationship" relationship="viewControllers" id="evK-Ut-Gxc"/>
+                        <segue destination="NSd-c4-auQ" kind="relationship" relationship="viewControllers" id="6Ey-zc-3es"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7L-ks-aeA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
