--- a/pursuit/Views/JobSeeker Views/JobDetails.storyboard
+++ b/pursuit/Views/JobSeeker Views/JobDetails.storyboard
@@ -952,7 +952,7 @@
                                         <rect key="frame" x="0.0" y="912.33330917358398" width="440" height="48.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NUv-wv-JdP" id="TNZ-Qf-dVi">
-                                            <rect key="frame" x="0.0" y="0.0" width="440" height="48"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="440" height="48.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nhK-ey-3Mm">
