--- a/pursuit/Views/Base.storyboard
+++ b/pursuit/Views/Base.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aK7-c3-D1U">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,6 +21,7 @@
                         <segue destination="sq9-AN-clp" kind="relationship" relationship="viewControllers" id="xB1-1n-RYp"/>
                         <segue destination="Pha-Gh-V8l" kind="relationship" relationship="viewControllers" id="e8B-dt-YZy"/>
                         <segue destination="NSd-c4-auQ" kind="relationship" relationship="viewControllers" id="6Ey-zc-3es"/>
+                        <segue destination="aUS-jl-yja" kind="relationship" relationship="viewControllers" id="eNJ-3h-sSD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7L-ks-aeA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
